# advance-spec

./: .dockerignore  .gitignore  Dockerfile  README.md  _strip_speculative_fields.py  docker-compose.yml  pyproject.toml
hybrid_spec_decoding/: __init__.py
hybrid_spec_decoding/analysis/: bfcl_agent.py  bfcl_v4_agent.py  calibrate_latency.py  collect_eagle3_drafts.py  collect_suffix_candidates.py  collect_target_probs.py  collect_union_trie.py  compute_agreement.py  compute_complementarity.py  extract_trajectory.py  plot_results.py  run_oracle_sim.py  run_tree_oracle_sim.py  specbench_agent.py  swebench_agent.py  tree_knapsack.py  verify_server.py
hybrid_spec_decoding/benchmarks/: run_baseline.py  run_benchmark.py  run_fusion.py  run_hybrid.py
notebooks/: analyze_eagle3_bench.ipynb  analyze_eagle3_sweep3d.ipynb  analyze_oracle_sim.ipynb
scripts/: bench_eagle3_configs.py  collect_draft_model.py  measure_decomposed_latency.py  measure_latency.py  measure_sglang_verify_latency.py  measure_verify_latency.py  merge_shards.sh  prepare_bfcl_data.py  prepare_specbench_data.py  replay_oracle.py  rerun_from_stage4.sh  rerun_stage6_sharded.sh  run_all.sh  run_benchmark_offline.sh  run_hybrid_baselines.sh  run_online_test.sh  run_oracle_pipeline.sh  run_parallel_draft_model.sh  run_parallel_p_t.sh  run_parallel_stage1.sh  run_pipeline.sh  run_tests.sh  sweep_eagle3_latency.py  test_full_pipeline.sh  test_qwen3_pipeline.sh
tests/: test_benchmarks.py  test_hybrid_baselines.py  test_online_integration.py  test_proposers.py  test_tracing.py  test_tree.py  test_tree_knapsack.py
(+183 files in other folders)
